[package]
name = "rust-dummy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = "0.4.42"
hyper = "1.7.0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
